Source/ISS/Development/NAMS/M9Concur/Vendor/Include/terM9.h

ViStatus _VI_FUNC terM9_getBackplaneSyncState (ViSession vi, ViInt32 syncIndex,
                              ViPInt32 state);
ViStatus _VI_FUNC terM9_getChannelPinOpcode (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 opcode);
ViStatus _VI_FUNC terM9_getEXT1InLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
  
ViStatus _VI_FUNC terM9_getEXT2InLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getExtClockSrcLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getFrontPanelSyncState (ViSession vi, ViInt32 syncIndex,
                              ViPInt32 state);
ViStatus _VI_FUNC terM9_getGroupGroupOpcode (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 groupOpcode, ViUInt32 _VI_FAR
                              groupValue[]);
ViStatus _VI_FUNC terM9_getLevelSet (ViSession vi, ViInt32 scopeIndex, ViInt32
                              levelSetIndex, ViPReal64 VIHValue, ViPReal64
                              VILValue, ViPReal64 VOHValue, ViPReal64 VOLValue,
                              ViPReal64 IOHValue, ViPReal64 IOLValue, ViPReal64
                              VCOMValue, ViPInt32 slewRate);
ViStatus _VI_FUNC terM9_getLevelSetIOH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 IOHValue);
ViStatus _VI_FUNC terM9_getLevelSetIOL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 IOLValue);
ViStatus _VI_FUNC terM9_getLevelSetProbe (ViSession vi, ViPReal64 PRHIValue,
                              ViPReal64 PRLOValue);
ViStatus _VI_FUNC terM9_getLevelSetProbePRHI (ViSession vi, ViPReal64
                              PRHIValue);
ViStatus _VI_FUNC terM9_getLevelSetProbePRLO (ViSession vi, ViPReal64
                              PRLOValue);
ViStatus _VI_FUNC terM9_getLevelSetSlewRate (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPInt32 slewRate);
ViStatus _VI_FUNC terM9_getLevelSetVCOM (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VCOMValue);
ViStatus _VI_FUNC terM9_getLevelSetVIH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VIHValue);
ViStatus _VI_FUNC terM9_getLevelSetVIL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VILValue);
ViStatus _VI_FUNC terM9_getLevelSetVOH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VOHValue);
ViStatus _VI_FUNC terM9_getLevelSetVOL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViPReal64 VOLValue);
ViStatus _VI_FUNC terM9_getPatternClutch (ViSession vi, ViPBoolean enable,
                              ViPInt32 polarity, ViPInt32 logicSelect);
ViStatus _VI_FUNC terM9_getPatternClutchEnable (ViSession vi, ViPBoolean
                              enable);
ViStatus _VI_FUNC terM9_getPatternClutchLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getPatternClutchPolarity (ViSession vi, ViPInt32
                              polarity);
ViStatus _VI_FUNC terM9_getPhaseTrigger (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 phaseIndex, ViPInt32 trigger);
ViStatus _VI_FUNC terM9_getSystemClock (ViSession vi, ViPInt32 divider, ViPInt32
                              edge, ViPInt32 mode, ViPInt32 reference, ViPInt32
                              outPath, ViPInt32 logicSelect);
ViStatus _VI_FUNC terM9_getSystemClockDivider (ViSession vi, ViPInt32 divider);
ViStatus _VI_FUNC terM9_getSystemClockEdge (ViSession vi, ViPInt32 edge);
ViStatus _VI_FUNC terM9_getSystemClockMode (ViSession vi, ViPInt32 mode);
ViStatus _VI_FUNC terM9_getSystemClockOutLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getSystemClockOutPath (ViSession vi, ViPInt32 outPath);
ViStatus _VI_FUNC terM9_getSystemClockReference (ViSession vi, ViPInt32
                              reference);
ViStatus _VI_FUNC terM9_getSystemClutch (ViSession vi, ViPBoolean enable,
                              ViPInt32 polarity, ViPInt32 logicSelect);
ViStatus _VI_FUNC terM9_getSystemClutchEnable (ViSession vi, ViPBoolean enable);
ViStatus _VI_FUNC terM9_getSystemClutchLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getSystemClutchPolarity (ViSession vi, ViPInt32
                              polarity);
ViStatus _VI_FUNC terM9_prepareDynamicPatternSetLoading (ViSession vi);
ViStatus _VI_FUNC terM9_resetChannelSignature (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[]);
ViStatus _VI_FUNC terM9_setBackplaneSyncState (ViSession vi, ViInt32 syncIndex,
                              ViInt32 state);
ViStatus _VI_FUNC terM9_setChannelPinOpcode (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 opcode);
ViStatus _VI_FUNC terM9_setEXT1InLogicSelect (ViSession vi, ViInt32
                              logicSelect);
  
ViStatus _VI_FUNC terM9_setEXT2InLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setExtClockSrcLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setFrontPanelSyncState (ViSession vi, ViInt32 syncIndex,
                              ViInt32 state);
ViStatus _VI_FUNC terM9_setGroupGroupOpcode (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 groupOpcode, ViUInt32 _VI_FAR
                              groupValue[]);
ViStatus _VI_FUNC terM9_setLevelSet (ViSession vi, ViInt32 scopeIndex, ViInt32
                              levelSetIndex, ViReal64 VIHValue, ViReal64
                              VILValue, ViReal64 VOHValue, ViReal64 VOLValue,
                              ViReal64 IOHValue, ViReal64 IOLValue, ViReal64
                              VCOMValue, ViInt32 slewRate);
ViStatus _VI_FUNC terM9_setLevelSetIOH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 IOHValue);
ViStatus _VI_FUNC terM9_setLevelSetIOL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 IOLValue);
ViStatus _VI_FUNC terM9_setLevelSetProbe (ViSession vi, ViReal64 PRHIValue,
                              ViReal64 PRLOValue);
ViStatus _VI_FUNC terM9_setLevelSetProbePRHI (ViSession vi, ViReal64 PRHIValue);
ViStatus _VI_FUNC terM9_setLevelSetProbePRLO (ViSession vi, ViReal64 PRLOValue);
ViStatus _VI_FUNC terM9_setLevelSetSlewRate (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViInt32 slewRate);
ViStatus _VI_FUNC terM9_setLevelSetVCOM (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VCOMValue);
ViStatus _VI_FUNC terM9_setLevelSetVIH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VIHValue);
ViStatus _VI_FUNC terM9_setLevelSetVIL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VILValue);
ViStatus _VI_FUNC terM9_setLevelSetVOH (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VOHValue);
ViStatus _VI_FUNC terM9_setLevelSetVOL (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 levelSetIndex, ViReal64 VOLValue);
ViStatus _VI_FUNC terM9_setPatternClutch (ViSession vi, ViBoolean enable,
                              ViInt32 polarity, ViInt32 logicSelect);
ViStatus _VI_FUNC terM9_setPatternClutchEnable (ViSession vi, ViBoolean enable);
ViStatus _VI_FUNC terM9_setPatternClutchLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setPatternClutchPolarity (ViSession vi, ViInt32
                              polarity);
ViStatus _VI_FUNC terM9_setPhase (ViSession vi, ViInt32 scopeIndex, ViInt32
                              phaseIndex, ViBoolean freerun, ViInt32 trigger);
ViStatus _VI_FUNC terM9_setPhaseFreerun (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 phaseIndex, ViBoolean freerun);
ViStatus _VI_FUNC terM9_setPhaseTrigger (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 phaseIndex, ViInt32 trigger);
ViStatus _VI_FUNC terM9_setSystemClock (ViSession vi, ViInt32 divider, ViInt32
                              edge, ViInt32 mode, ViInt32 reference, ViInt32
                              outPath, ViInt32 logicSelect);
ViStatus _VI_FUNC terM9_setSystemClockDivider (ViSession vi, ViInt32 divider);
ViStatus _VI_FUNC terM9_setSystemClockEdge (ViSession vi, ViInt32 edge);
ViStatus _VI_FUNC terM9_setSystemClockMode (ViSession vi, ViInt32 mode);
ViStatus _VI_FUNC terM9_setSystemClockOutLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setSystemClockOutPath (ViSession vi, ViInt32 outPath);
ViStatus _VI_FUNC terM9_setSystemClockReference (ViSession vi, ViInt32
                              reference);
ViStatus _VI_FUNC terM9_setSystemClutch (ViSession vi, ViBoolean enable, ViInt32
                              polarity, ViInt32 logicSelect);
ViStatus _VI_FUNC terM9_setSystemClutchEnable (ViSession vi, ViBoolean enable);
ViStatus _VI_FUNC terM9_setSystemClutchLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setSystemClutchPolarity (ViSession vi, ViInt32
                              polarity);