Source/Core/Source/System/TPExec_TETS/Source/TERM9.vb


    Declare Function terM9_getPhaseTrigger Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByRef trigger As Integer) As Integer

    Declare Function terM9_setPhase Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByVal freerun As Short, ByVal trigger As Integer) As Integer

    Declare Function terM9_setPhaseFreerun Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByVal freerun As Short) As Integer

    Declare Function terM9_setPhaseTrigger Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal PhaseIdx As Integer, ByVal trigger As Integer) As Integer

    Declare Function terM9_getExtClockSrcLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_setExtClockSrcLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_getSystemClock Lib "terM9_32.dll" (ByVal vi As Integer, ByRef divider As Integer, ByRef edge As Integer, ByRef mode As Integer, ByRef reference As Integer, ByRef outpath As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_getSystemClockDivider Lib "terM9_32.dll" (ByVal vi As Integer, ByRef divider As Integer) As Integer

    Declare Function terM9_getSystemClockEdge Lib "terM9_32.dll" (ByVal vi As Integer, ByRef edge As Integer) As Integer

    Declare Function terM9_getSystemClockMode Lib "terM9_32.dll" (ByVal vi As Integer, ByRef mode As Integer) As Integer

    Declare Function terM9_getSystemClockReference Lib "terM9_32.dll" (ByVal vi As Integer, ByRef reference As Integer) As Integer

    Declare Function terM9_getSystemClockOutPath Lib "terM9_32.dll" (ByVal vi As Integer, ByRef outpath As Integer) As Integer

    Declare Function terM9_getSystemClockOutLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_setSystemClock Lib "terM9_32.dll" (ByVal vi As Integer, ByVal divider As Integer, ByVal edge As Integer, ByVal mode As Integer, ByVal reference As Integer, ByVal outpath As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_setSystemClockDivider Lib "terM9_32.dll" (ByVal vi As Integer, ByVal divider As Integer) As Integer

    Declare Function terM9_setSystemClockEdge Lib "terM9_32.dll" (ByVal vi As Integer, ByVal edge As Integer) As Integer

    Declare Function terM9_setSystemClockMode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal mode As Integer) As Integer

    Declare Function terM9_setSystemClockReference Lib "terM9_32.dll" (ByVal vi As Integer, ByVal reference As Integer) As Integer

    Declare Function terM9_setSystemClockOutPath Lib "terM9_32.dll" (ByVal vi As Integer, ByVal outpath As Integer) As Integer

    Declare Function terM9_setSystemClockOutLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_getSystemClutch Lib "terM9_32.dll" (ByVal vi As Integer, ByRef enable As Short, ByRef polarity As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_getSystemClutchEnable Lib "terM9_32.dll" (ByVal vi As Integer, ByRef enable As Short) As Integer

    Declare Function terM9_getSystemClutchPolarity Lib "terM9_32.dll" (ByVal vi As Integer, ByRef polarity As Integer) As Integer

    Declare Function terM9_getSystemClutchLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_setSystemClutch Lib "terM9_32.dll" (ByVal vi As Integer, ByVal enable As Short, ByVal polarity As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_setSystemClutchEnable Lib "terM9_32.dll" (ByVal vi As Integer, ByVal enable As Short) As Integer

    Declare Function terM9_setSystemClutchPolarity Lib "terM9_32.dll" (ByVal vi As Integer, ByVal polarity As Integer) As Integer

    Declare Function terM9_setSystemClutchLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_getPatternClutch Lib "terM9_32.dll" (ByVal vi As Integer, ByRef enable As Short, ByRef polarity As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_getPatternClutchEnable Lib "terM9_32.dll" (ByVal vi As Integer, ByRef enable As Short) As Integer

    Declare Function terM9_getPatternClutchPolarity Lib "terM9_32.dll" (ByVal vi As Integer, ByRef polarity As Integer) As Integer

    Declare Function terM9_getPatternClutchLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_setPatternClutch Lib "terM9_32.dll" (ByVal vi As Integer, ByVal enable As Short, ByVal polarity As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_setPatternClutchEnable Lib "terM9_32.dll" (ByVal vi As Integer, ByVal enable As Short) As Integer

    Declare Function terM9_setPatternClutchPolarity Lib "terM9_32.dll" (ByVal vi As Integer, ByVal polarity As Integer) As Integer

    Declare Function terM9_setPatternClutchLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_getEXT1InLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_setEXT1InLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_getEXT2InLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByRef logicSelect As Integer) As Integer

    Declare Function terM9_setEXT2InLogicSelect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal logicSelect As Integer) As Integer

    Declare Function terM9_getLevelSet Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef VIHValue As Double, ByRef VILValue As Double, ByRef VOHValue As Double, ByRef VOLValue As Double, ByRef IOHValue As Double, ByRef IOLValue As Double, ByRef VCOMValue As Double, ByRef slewRate As Integer) As Integer

    Declare Function terM9_getLevelSetIOH Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef IOHValue As Double) As Integer

    Declare Function terM9_getLevelSetIOL Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef IOLValue As Double) As Integer

    Declare Function terM9_getLevelSetVCOM Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef VCOMValue As Double) As Integer

    Declare Function terM9_getLevelSetVIH Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef VIHValue As Double) As Integer

    Declare Function terM9_getLevelSetVIL Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef VILValue As Double) As Integer

    Declare Function terM9_getLevelSetVOH Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef VOHValue As Double) As Integer

    Declare Function terM9_getLevelSetVOL Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef VOLValue As Double) As Integer

    Declare Function terM9_getLevelSetSlewRate Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByRef slewRate As Integer) As Integer

    Declare Function terM9_setLevelSet Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal VIHValue As Double, ByVal VILValue As Double, ByVal VOHValue As Double, ByVal VOLValue As Double, ByVal IOHValue As Double, ByVal IOLValue As Double, ByVal VCOMValue As Double, ByVal slewRate As Integer) As Integer

    Declare Function terM9_setLevelSetIOH Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal IOHValue As Double) As Integer

    Declare Function terM9_setLevelSetIOL Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal IOLValue As Double) As Integer

    Declare Function terM9_setLevelSetVCOM Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal VCOMValue As Double) As Integer

    Declare Function terM9_setLevelSetVIH Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal VIHValue As Double) As Integer

    Declare Function terM9_setLevelSetVIL Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal VILValue As Double) As Integer

    Declare Function terM9_setLevelSetVOH Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal VOHValue As Double) As Integer

    Declare Function terM9_setLevelSetVOL Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal VOLValue As Double) As Integer

    Declare Function terM9_setLevelSetSlewRate Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal LevelIdx As Integer, ByVal slewRate As Integer) As Integer

    Declare Function terM9_getLevelSetProbe Lib "terM9_32.dll" (ByVal vi As Integer, ByRef PRHIValue As Double, ByRef PRLOValue As Double) As Integer

    Declare Function terM9_getLevelSetProbePRHI Lib "terM9_32.dll" (ByVal vi As Integer, ByRef PRHIValue As Double) As Integer

    Declare Function terM9_getLevelSetProbePRLO Lib "terM9_32.dll" (ByVal vi As Integer, ByRef PRLOValue As Double) As Integer

    Declare Function terM9_setLevelSetProbe Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PRHIValue As Double, ByVal PRLOValue As Double) As Integer

    Declare Function terM9_setLevelSetProbePRLO Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PRLOValue As Double) As Integer

    Declare Function terM9_setLevelSetProbePRHI Lib "terM9_32.dll" (ByVal vi As Integer, ByVal PRHIValue As Double) As Integer

    Declare Function terM9_getChannelPinOpcode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef opcode As Integer) As Integer

    Declare Function terM9_setChannelPinOpcode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal opcode As Integer) As Integer

    Declare Function terM9_getGroupGroupOpcode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef groupOpcode As Integer, ByRef groupValue As Integer) As Integer

    Declare Function terM9_setGroupGroupOpcode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal groupOpcode As Integer, ByRef groupValue As Integer) As Integer

    Declare Function terM9_getFrontPanelSyncState Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByRef state As Integer) As Integer

    Declare Function terM9_setFrontPanelSyncState Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByVal state As Integer) As Integer

    Declare Function terM9_getBackplaneSyncState Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByRef state As Integer) As Integer

    Declare Function terM9_setBackplaneSyncState Lib "terM9_32.dll" (ByVal vi As Integer, ByVal syncIdx As Integer, ByVal state As Integer) As Integer

    Declare Function terM9_resetChannelSignature Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer) As Integer

    Declare Function terM9_prepareDynamicPatternSetLoading Lib "terM9_32.dll" (ByVal vi As Integer) As Integer
